--- a/game.html
+++ b/game.html
@@ -13,7 +13,7 @@
             <div id = "hud-item">
                 <p>  Questao
                     </p>
-                    <h1 clas="hud-main-text" id="questionCounter">
+                    <h1 class="hud-main-text" id="questionCounter">
                     </h1>
             </div>
             <div id = "hud-item">
@@ -43,6 +43,6 @@
             </div>
         </div>
     </div>
-    <script> src="game.js" </script>
+    <script src="game.js"> </script>
 </body>
 </html>
