--- a/end.html
+++ b/end.html
@@ -16,11 +16,12 @@
           name="username"
           id="username"
           placeholder="username" />
-        <buttom type="submite" class="btn" id="saveScore()" onclick="saveHighScore(event)"
-          disabled>Salvar</buttom>
+        <button type="submit" class="btn" id="saveScore" onclick="saveHighScore(event)"
+          disabled>Salvar</button>
       </form>
       <a class="btn" href="./game.html">Jogue novamente</a>
       <a class="btn" href="/">Volte ao inicio</a>
+      <a class="btn" href="./carta.html">Carta</a> <!-- Novo botão adicionado -->
     </div>
   </div>
   <script src="end.js"></script>
