--- a/carta.html
+++ b/carta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carta de Amor</title>
+    <title>Carta de amor</title>
     <style>
         :root {
             background-color: #ecf5ff;
@@ -41,7 +41,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Carta de Amor</h1>
+        <h1>Carta 16/10/2023</h1>
         <p>
             Primeiramente parabéns por acertar todas as questões do quiz, segundamente eu queria começar o início que é a passarela. Aquela passarela me traz ótimas lembranças e principalmente as de quando eu estava lá contigo, garanto que sempre começa a tocar "Garota de Ipanema" quando eu tava lá contigo, eu nunca na minha vida poderia imaginar que iria conhecer o meu grande amor e amor da minha vida naquela passarela. eu lembro perfeitamente de todas as nossas primeiras interações e de como tu fazia meu coração bater muito rápido, mas era de uma forma que eu me sentia segura, sabe? Você chegou de manso e me deixou toda desnorteada, desnorteada principalmente quando nós demos nosso primeiro beijo, não sei se você já percebeu mas até hoje eu fico com os olhos fechados quando você me beija e faço isso para eu lembrar da sensação do nosso primeiro beijo e pra mim todos eles são os primeiros. eu realmente amo muito você e espero muito que você goste dessa e das próximas cartas.
         </p>
