--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container"> 
     <div id="home" class="flex-center flex-column">
-        <h1>Perguntas</h1>
+        <h1>About us</h1>
         <a class="btn" href="./game.html">Play</a>
         <a class="btn" href="/highscores.html">Scores</a>
     </div>
